--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
-
+    <service
+        android:name=".CheckInService">
+    </service>
 
     <application
         android:allowBackup="true"
@@ -28,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".GeofenceTransitionsIntentService"/>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBmYgfZuxuMjxYmwspfBmEa0_9V0f5Vr3U" />
